--- a/resources/templates/article/writeArticle.html
+++ b/resources/templates/article/writeArticle.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<!--ÉùÃ÷staticÎªÒ³ÃæÆ¬¶ÎÃû³Æ-->
+<!--Ã‰Ã¹ÃƒÃ·staticÃÂªÃ’Â³ÃƒÃ¦Ã†Â¬Â¶ÃÃƒÃ»Â³Ã†-->
 <head th:fragment="static">
 <link th:href="@{/webjars/bootstrap/3.2.0/css/bootstrap.css}"
 	rel="stylesheet" type="text/css" />
@@ -28,10 +28,52 @@
 				resizeType : 0,
 		};
 		var editor = K.create('textarea[name="content"]', options);
-		
 	});
-	
 </script>
+<script>
+    $(function() {
+    $("#submit").click(function(e){
+    	console.log(e);
+    	submit();
+    	
+	});
+    function submit(){
+    	var title = $("#ArticleTitle").val();
+    	console.log(title);
+    	var editor = KindEditor.instances[0];
+    	console.log(editor);
+    	var text = editor.html();
+    	console.log(text);
+    	
+		postData('http://localhost:8082/api/articles/writeArticle', {articleTitle: title , articleText: text})
+    	    .then(afterSubmit) // JSON from `response.json()` call
+    	    .catch(error => console.error(error))
+    }
+    
+    function afterSubmit(){
+    	alert("æ·»åŠ æˆåŠŸ");
+    }
+    
+  function postData(url, data) {
+    // Default options are marked with *
+    return fetch(url, {
+      body: JSON.stringify(data), // must match 'Content-Type' header
+      cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
+      credentials: 'same-origin', // include, same-origin, *omit
+      headers: {
+        'user-agent': 'Mozilla/4.0 MDN Example',
+        'content-type': 'application/json'
+      },
+      method: 'POST', // *GET, POST, PUT, DELETE, etc.
+      mode: 'cors', // no-cors, cors, *same-origin
+      redirect: 'follow', // manual, *follow, error
+      referrer: 'no-referrer', // *client, no-referrer
+    })
+    .then(response => response.json()) // parses response to JSON
+  }
+    })
+    
+    </script>
 <style type="text/css">
 * {
 	margin: 0;
@@ -108,14 +150,16 @@ body {
 		<div class="titles">
 			<ul th:each="title : ${articles}">
 				<li><a th:text="${title.articleTitle}"
-					th:href="@{http://localhost:8082/api/getOneArticle?articlesId={id}(id=${title.articlesId})}">ÕâÀïÊÇÎÄÕÂ·ÖÀà</a></li>
+					th:href="@{http://localhost:8082/api/articles/getOneArticle?articlesId={id}(id=${title.articlesId})}"></a></li>
 			</ul>
 		</div>
 	</div>
 	<div class="middle-right">
+		<div class="titleInput"><p>æ–‡ç« æ ‡é¢˜ï¼š</p><input type="text" id="ArticleTitle" /><input type="button" id="submit" /> </div>
 		<div class="text">
 		<textarea id="editor_id" name="content" style="width:100% ;height:1850px"></textarea>
 		</div>
+		
 	</div>
 
 
